# pestifer

./: .envrc  .gitattributes  .gitignore  .readthedocs.yaml  4zmj.cif  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  bpti3.yaml  pyproject.toml  setup.cfg  setup.py  sperm-whale-myoglobin.yaml
.github/workflows/: release.yaml  tests.yaml  update_docs_only.yaml
bash/: prep_namd_restart.sh
docs/: Makefile  make.bat  overrides.txt  requirements.txt
docs/design/: coord-port-plan.md  density-equilibrate.md  loop-modeling.md  mmcif-offload.md  on-demand-solvent-parameters.md  roadmap.md  solvent-collection.md
docs/source/: CHANGELOG.rst  api.rst  changelog.rst  charmmff-customizations.rst  conf.py  config_ref.rst  configurations.rst  examples.rst  index.md  index.rst  installation.rst  introduction.rst  roadmap.md  usage.rst
pestifer/: README.md  __init__.py  assets.py  asymmetricunit.py  atom.py  attach.py  banner.py  basemod.py  baseobj.py  basetask.py  bilayer.py  bioassemb.py  biomolecule.py  chain.py  chainidmanager.py  chainids.py  charmffcontent.py  charmmffcontent.py  charmmresi.py  charmmtop.py  cifutil.py  colors.py  colvars.py  command.py  condacheck.py  config.py  controller.py  coord.py  graft.py  link.py  linkcell.py  modcontainer.py  modmanager.py  mods.py  modsfile.py  moldata.py  molecule.py  mutation.py  namdlog.py  namdrestart.py  (+23 more)
pestifer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pestifer/Resources/: __init__.py
pestifer/charmmff/: __init__.py  autocache.py  charmmffcontent.py  charmmffprm.py  charmmffresidatabase.py  charmmfftop.py  charmmresi.py  charmmresidatabase.py  charmmtop.py  graphhelpers.py  make_pdb_collection.py  make_solvent_box.py  pdbrepository.py  segtype_classifier.py
pestifer/cli/: __init__.py  pestifer.py  subcommand.py
pestifer/core/: __init__.py  artifacts.py  baseobj.py  baseobj_new.py  basetask.py  command.py  config.py  controller.py  errors.py  example.py  examplemanager.py  labels.py  ledger.py  objmanager.py  pdbrepository.py  pestifer.py  pipeline.py  resourcemanager.py  scripters.py  scriptwriters.py  stringthings.py  system_inspector.py
pestifer/logparsers/: __init__.py  logparser.py  namdlogparser.py  packmollogparser.py  pdb2pqrlogparser.py  psfgenlogparser.py
pestifer/molecule/: __init__.py  asymmetricunit.py  atom.py  bilayer.py  bioassemb.py  chainidmanager.py  colvars.py  coordmanip.py  graft_geom.py  molecule.py  pdbwrite.py  residue.py  residue_new.py  ring.py  segment.py  stateinterval.py  transform.py
pestifer/objs/: __init__.py  align.py  atom.py  cfusion.py  cleavagesite.py  crot.py  deletion.py  graft.py  insertion.py  link.py  mutation.py  orient.py  patch.py  resid.py  residuedelete.py  rottrans.py  seqadv.py  ssbond.py  ssbonddelete.py  substitution.py  ter.py  transfer_coords.py  transrot.py
pestifer/psfutil/: __init__.py  declash.py  loop_ccd.py  psfangle.py  psfatom.py  psfbond.py  psfcontents.py  psfdihedral.py  psfpairex.py  psfpatch.py  psfremark.py  psfring.py  psftopoelement.py  ring_resolve.py  tail_model.py
pestifer/resources/: __init__.py  modifications.jsonl
pestifer/schema/: __init__.py  base.yaml
pestifer/scripters/: __init__.py  filewriter.py  genericscripter.py  namd.py  namd_colvar_input.py  namdcolvarinputscripter.py  namdscripter.py  packmol.py  packmolscripter.py  psfgen.py  psfgenscripter.py  tcl.py  tclscripters.py  vmd.py  vmdscripter.py
pestifer/sphinxext/: __init__.py  modify_toctree.py  sphinx_examplemanager.py  task_table.py  tclscript.py  toctree_util.py
pestifer/subcommands/: __init__.py  build.py  build_example.py  cache.py  config_default.py  config_help.py  config_subcommands.py  density_profile.py  desolvate.py  desolvate_subcommand.py  example_subcommands.py  fetch_example.py  follow_namd_log.py  make_ligand_mol2.py  make_namd_restart.py  make_pdbcollection.py  mdplot.py  mdplot_subcommand.py  modify_package.py  namd_subcommands.py  new_system.py  rebuild_charmmff_cache.py  run.py  setup_vmd.py  show_resources.py  subcommand.py  wheretcl.py
pestifer/tasks/: __init__.py  basetask.py  bilayer.py  bilayertask.py  cleave.py  continuation.py  density_equilibrate.py  desolvate.py  domainswap.py  fetch.py  initiate.py  ligate.py  make_membrane_system.py  manipulate.py  md.py  mdplot.py  mdtask.py  merge.py  pdb2pqr.py  pipeline_contract.py  psfgen.py  pytest_buildterminate.py  pytest_terminate.py  restart.py  ringcheck.py  solvate.py  taskcollections.py  terminate.py  validate.py
pestifer/util/: __init__.py  _goldenmode.py  cacheable_object.py  cifutil.py  colors.py  coord.py  density_convergence.py  densityprofile.py  formatvalidator.py  gitutil.py  linkcell.py  logparsers.py  namdcolvars.py  namdlog.py  namdrestart.py  patch.py  progress.py  psf.py  pytest_plugin.py  readme_to_changelog_with_dates.py  spinner_wrapper.py  stringthings.py  units.py  util.py
scratch/1/: my_6pti.coor  my_6pti.psf  my_6pti.vel  my_6pti.xsc
scratch/4zmj/: 2.1.yaml  ecto-base-extended.coor  ecto-base-extended.vel
scratch/atom-exclude-logic/: 5u3o.yaml  5u3o_build.namd  5u3o_build.psf  5u3o_build_minimal.prm
scripts/: prerelease.sh  release.sh  run_all_examples.sh  run_all_examples_local.sh  trim_toppar.sh
tcl/: dummy.tcl  list_handlers.tcl
templates/: cv-template.in
tests/: __init__.py  conftest.py
tests/inputs/: 4zmj.cif  8fae.cif
tests/integration/: atomselect_macros.tcl  conftest.py  pestifer-script.tcl  test_bioassemb.py  test_biomt.py  test_builds.py  test_builds_new.py  test_cfusion.py  test_config.py  test_controller.py  test_glycan_bonds.py  test_mdplot.py  test_modlist.py  test_mods.py  test_molecule.py  test_objlist.py  test_objs.py  test_psfgen.py  test_residue.py  test_ringcheck.py  test_scripters.py  test_scriptwriters.py  test_segment.py
tests/production/: test_builds.py
tests/unit/: __init__.py  test_basemod.py  test_baseobj.py  test_basetasks.py  test_bilayer.py  test_bioassemb.py  test_chain.py  test_chainidmanager.py  test_charmmffcontent.py  test_charmmtop.py  test_cif.py  test_colvars.py  (+34 more)
(+1664 files in other folders)
