# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pestifer"
version = "2.2.10"
authors = [
  { name="Cameron F Abrams", email="cfa22@drexel.edu" },
]
description = "A NAMD topology/coordinate system preparation tool"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "colorist",
  "filelock",
  "fsspec",
  "gputil",
  "joblib",
  "matplotlib",
  "mmcif",
  "networkx",
  "numpy>=1.24",
  "pandas",
  "mmcif-pdbx>=1.1.2",  # pdb2pqr dep (installed --no-deps to avoid docutils conflict)
  "pidibble>=1.5.2",
  "platformdirs",
  "propka>=3.5",        # pdb2pqr dep
  "requests",           # pdb2pqr dep
  "progressbar2",
  "pydantic",
  "pyyaml>=6",
  "scipy",
  "unidiff",
  "ycleptic>=2.0.1",
]

[project.scripts]
pestifer = "pestifer.cli.pestifer:cli"

[project.urls]
"Source" = "https://github.com/cameronabrams/pestifer"
"Documentation" = "https://pestifer.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/cameronabrams/pestifer/issues"

[tool.pytest.ini_options]
log_cli = false

[project.entry-points.pytest11]
pestifer = "pestifer.util.pytest_plugin"

[tool.hatch.envs.default.scripts]
post-install = [
  "pip install pdb2pqr==3.7.1 --no-deps"
]

[tool.hatch.build]
exclude = [
  "pestifer/resources/_archive/**",
  "scratch/**",
  "docs/build/**",
  "tests/unit/test_tasks/fixtures/**",
  "tests/unit/test_tasks/test_*/",
  "tests/__*/",        # immediate subdirs like tests/__pycache__/
  "tests/**/__*/",     # any nested __* directories under tests/
  "tests/logs/",
  ".github/**",
]