# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pestifer"
version = "2.6.3"
authors = [
  { name="Cameron F Abrams", email="cfa22@drexel.edu" },
]
description = "A NAMD topology/coordinate system preparation tool"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "colorist",
  "filelock",
  "fsspec",
  "joblib",
  "matplotlib",
  "mmcif",
  "networkx",
  "numpy>=1.24",
  "pandas",
  "mmcif-pdbx>=1.1.2",
  "pdb2pqr>=3.6",       # pKa/protonation; its stale `docutils<0.18` pin is never
                        # used and is overridden in [tool.uv] below
  "pidibble>=1.5.2",
  "platformdirs",
  "propka>=3.5",
  "requests",
  "progressbar2",
  "pydantic",
  "pyyaml>=6",
  "scipy",
  "unidiff",
  "ycleptic>=2.0.6"
]

[project.optional-dependencies]
# Auto-CGenFF ligand parameterization (protonation + cgenff binary wrapper).
# The cgenff binary itself is a separate runtime dependency obtained from SilcsBio.
ligand-paramgen = [
  "rdkit",
  "dimorphite_dl",
]

[project.scripts]
pestifer = "pestifer.cli.pestifer:cli"

[project.urls]
"Source" = "https://github.com/cameronabrams/pestifer"
"Documentation" = "https://pestifer.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/cameronabrams/pestifer/issues"

[tool.uv]
# pdb2pqr declares `docutils<0.18` but never imports docutils; that stale pin is
# otherwise unsatisfiable alongside the Sphinx docs toolchain (docutils>=0.21).
# Override it so the two coexist.  (Read the Docs passes the same constraint via
# docs/overrides.txt, since `uv pip` does not read this section.)
override-dependencies = ["docutils>=0.21,<0.23"]

[tool.pytest.ini_options]
log_cli = false

[project.entry-points.pytest11]
pestifer = "pestifer.util.pytest_plugin"

[tool.hatch.build]
exclude = [
  "pestifer/resources/_archive/**",
  "scratch/**",
  "docs/build/**",
  "tests/unit/test_tasks/fixtures/**",
  "tests/unit/test_tasks/test_*/",
  "tests/__*/",        # immediate subdirs like tests/__pycache__/
  "tests/**/__*/",     # any nested __* directories under tests/
  "tests/logs/",
  ".github/**",
]