[metadata]
name = pestifer
version = 0.0.1
description = 'Automated NAMD Input System Builder for Proteins'
url = 'https://github.com/cameronabrams/pestifer'
author = 'Cameron Abrams'
author_email = 'cfa22@drexel.edu'
license = 'MIT'
classifiers=['Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9']

[options]
packages = pestifer
install_requires =
    requests
    importlib
    numpy
    pandas
    scipy
    parmed
    networkx
    pyyaml
    codetiming
    wget
    pycifrw
    
include_package_data = True

; Create the "pestifer" executable
[options.entry_points]
console_scripts =
        pestifer = pestifer.pestifer:cli